# fastapi-imp-auth-skele

./: LICENSE  README.md  config.cfg  pyproject.toml
src/fastapi_imp_auth_skele/: __init__.py  config.py  middleware.py  models.py  private_routes.py  public_routes.py  service.py
tests/: test_config.cfg  test_service.py
